- fixed lines on mobile.

--- a/src/public/assets/styles/_parallels.scss
+++ b/src/public/assets/styles/_parallels.scss
@@ -368,11 +368,16 @@ $arrow-box-point-offset-y: 0;
     &::after {
       position: absolute;
       right: 0;
-      bottom: 80px;
       width: 1px;
-      height: 70%;
+      height: 172px;
       background: #fff;
       content: '';
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      top: 10px;
+      bottom: 10px;
+      margin: 10px 0;
     }
   }
 
